[project]
name = "reuse-mlx-fast-scan"
version = "0.1.0"
description = "Fast local RE-USE / SEMamba inference with MLX + Metal selective scan."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub[hf-xet]>=1.22.0",
    "mlx>=0.31.2",
    "mlx-speech>=0.4.3",
    "numpy>=2.5.1",
    "soundfile>=0.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
